--- a/staff.html
+++ b/staff.html
@@ -24,13 +24,12 @@
     .card { background:#fff; border-radius:14px; box-shadow:0 8px 28px rgba(0,0,0,.12); padding:1.25rem; margin-bottom:1.25rem; }
     h1, h2, h3 { color:#0b4a2b; margin:0 0 .6rem; }
 
-    .staff-grid { display:grid; gap:1rem; }
-    @media (min-width: 900px){ .staff-grid { grid-template-columns: repeat(3, 1fr); } }
+    .staff-grid { display:grid; gap:1rem; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); }
 
-    .staff-card { background:#fff; border:1px solid #e2ebe6; border-radius:14px; overflow:hidden; box-shadow:0 6px 20px rgba(0,0,0,.08); }
+    .staff-card { background:#fff; border:1px solid #e2ebe6; border-radius:14px; overflow:hidden; box-shadow:0 6px 20px rgba(0,0,0,.08); display:flex; flex-direction:column; }
 
-    /* Uniform photo sizing */
-    .photo { width:100%; aspect-ratio: 3 / 4; overflow:hidden; background:#eaf5ef; border-bottom:1px solid #dfe9e3; }
+    /* Uniform photo sizing (max ~420px tall) */
+    .photo { width:100%; height: clamp(260px, 34vw, 420px); background:#eaf5ef; border-bottom:1px solid #dfe9e3; overflow:hidden; }
     .photo img { width:100%; height:100%; object-fit:cover; display:block; }
 
     .staff-body { padding:1rem 1rem 1.25rem; }
@@ -63,7 +62,7 @@
     <section class="card">
       <h2>Our Most Notable Staff Members</h2>
       <div class="staff-grid">
-        <!-- Jan (keeps original description) -->
+        <!-- Jan -->
         <article class="staff-card">
           <a class="photo" href="jan-kowalski.jpg" target="_blank" rel="noopener">
             <img src="jan-kowalski.jpg" alt="Jan Kowalski, Head Ranger" loading="lazy" decoding="async">
@@ -74,7 +73,7 @@
           </div>
         </article>
 
-        <!-- Magdalena (keeps original description) -->
+        <!-- Magdalena -->
         <article class="staff-card">
           <a class="photo" href="magdalena-wisniewska.jpg" target="_blank" rel="noopener">
             <img src="magdalena-wisniewska.jpg" alt="Magdalena Wiśniewska, Senior Dragon Biologist" loading="lazy" decoding="async">
@@ -85,7 +84,7 @@
           </div>
         </article>
 
-        <!-- Piotr (keeps original description) -->
+        <!-- Piotr -->
         <article class="staff-card">
           <a class="photo" href="piotr-nowak.jpg" target="_blank" rel="noopener">
             <img src="piotr-nowak.jpg" alt="Piotr Nowak, Cultural Liaison" loading="lazy" decoding="async">
