--- a/dragons.html
+++ b/dragons.html
@@ -248,7 +248,7 @@
 
       <section class="profile" id="iskra">
         <div class="headerline">
-          <h3>Iskra</h3>
+          <h3>Iskra(Spark)</h3>
           <span class="muted">— Young Polish Forest Dragon (<em>Draconis sylvanus</em>)</span>
         </div>
         <div class="tags">
@@ -272,7 +272,7 @@
 
       <section class="profile" id="zar">
         <div class="headerline">
-          <h3>Żar</h3>
+          <h3>Żar(Ember)</h3>
           <span class="muted">— Mountain Ember Dragon (<em>Draconis montanus</em>)</span>
         </div>
         <div class="tags">
