--- a/adoption.html
+++ b/adoption.html
@@ -176,7 +176,7 @@
 
       <!-- WhatsApp button: replace the href with your real channel or number -->
       <p style="margin:.6rem 0 0;">
-        <a class="btn whats" href="https://chat.whatsapp.com/" target="_blank" rel="noopener">Share via WhatsApp</a>
+        <a class="btn whats" href="https://chat.whatsapp.com/KiQWTJbHzPA638KqCILg8P?mode=ac_t" target="_blank" rel="noopener">Share via WhatsApp</a>
         <span class="small muted" style="margin-left:.5rem;"></span>
       </p>
 
